fix overflow in board

--- a/style/board.css
+++ b/style/board.css
@@ -470,11 +470,8 @@ h1 {
 }
 
 .styled-checkbox + span {
-  display: flex;
   align-items: flex-start;
-   position: relative;
-  
-
+  position: relative;
 }
 
 .styled-checkbox + span::before {
